courses/devops/kubernetes/manifests/deployment-java.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java-app
  template:
    metadata:
      labels:
        app: java-app
    spec:
      containers:
        - name: java-app
          image: iesodias/java-api:latest
          ports:
            - containerPort: 8081
