courses/devops/kubernetes/manifests/java-api-hpa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java-app
  template:
    metadata:
      labels:
        app: java-app
    spec:
      containers:
        - name: java-container
          image: iesodias/java-api:latest
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

        - name: stress
          image: progrium/stress
          args: ["--cpu", "2", "--timeout", "300s"]
