courses/devops/kubernetes/manifests/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: homolog
---
apiVersion: v1
kind: Namespace
metadata:
  name: prod

---

# Deployment example in a specific namespace
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-deployment
  namespace: dev
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: java-app
  template:
    metadata:
      labels:
        app: java-app
    spec:
      containers:
        - name: java-app
          image: iesodias/java-api:latest
          ports:
            - containerPort: 8081
